--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/server.js",
-      "use": "@vercel/node"
-    }
+    { "src": "public/index.html", "use": "@vercel/static" },
+    { "src": "api/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/socket.io/(.*)",
-      "dest": "/api/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/public/$1" },
+    { "src": "/api/(.*)", "dest": "/api/server.js" }
   ]
 }
